--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <module>db</module>
         <module>web3</module>
         <module>chainlayer</module>
-      <!--  <module>token-api</module> -->
+        <module>token-api</module>
     </modules>
 
 
