move modules around

--- a/chainlayer/pom.xml
+++ b/chainlayer/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>fi.decentri</groupId>
+            <artifactId>web3</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
